--- a/Day_29/views/navbar.ejs
+++ b/Day_29/views/navbar.ejs
@@ -35,6 +35,9 @@
                 <li><a class="dropdown-item" href="#">Another action</a></li>
                 <li><hr class="dropdown-divider" /></li>
                 <li>
+                  <a class="dropdown-item" href="#">Another action</a>
+                </li>
+                 <li>
                   <a class="dropdown-item" href="#">Something else here</a>
                 </li>
               </ul>
